# champollion-deck

./: .gitignore  Agent.md  index.html  license.md  main.sh  package-lock.json  package.json  readme.md  vite.config.ts
.github/workflows/: release.yml
public/icons/: app-icon.af
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
