[package]
name = "ollama-translator"
version = "1.1.0"
description = "Local Champollion Deck"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
